10/21/11 change request: different labels on sliders and concentration display in Molarity tab
10/20/11 change solution node to a cylinder
10/20/11 change Reset All button from yellow to light gray, it shouldn't receive that much attention
10/20/11 first pass at a more 3D-looking beaker, using image provided by NP. Solution and precipitate shapes have not been revised.
10/17/11 make beaker label narrower
10/17/11 rename tab "Dilution Equation" to "Dilution Intro"
# 0.00.03 (57572) Oct 12, 2011
10/12/11 dev version with JC's change requests
10/12/11 for solute amount slider, display min tick label as "0 mol" instead of "0.00 mol"
10/12/11 use plain font for "M=mol/L", hide when show values is false
10/12/11 change colors as requested by JC
10/12/11 change request: change title on concentration display
# 0.00.02 (57564) Oct 12, 2011
10/12/11 up/down arrows in slider JTextField to increment/decrement
10/12/11 frosty translucent background behind formula on beaker
10/12/11 translucent background behind "Saturated!"
10/12/11 show H2O on beaker when concentration=0
10/12/11 relative layout of Molarity tab
10/12/11 move beaker ticks to left side of beaker, closer to volume control
10/12/11 set columns in slider JTextFields based on number formatter pattern
10/12/11 tweak location of precipitate particles to account for thickness of beaker walls
10/12/11 add saturation point indicator to concentration display
10/12/11 adjust gradients on concentration display to account for saturation point
10/12/11 adjust solution color to account for saturation
10/12/11 add tick marks for min/max range labels on sliders
10/12/11 fix units on concentration display
10/12/11 generalize tick mark for reuse in slider
10/12/11 round corners of slider thumbs
10/12/11 use beaker from ph-scale, show/hide tick mark values
10/12/11 add moles-to-particles multiplier for precipitates
10/12/11 create custom formatter with special handling of zero and ints