@@ -11,7 +11,6 @@ low=low
 lots=lots
 makeDilutions=Make Dilutions
 molarity=Molarity
-molarityFormula=(M=mol/L)
 none=none
 saturated=Saturated!
 showValues=Show values
